--- a/TestingSystem.XamarinForms/TestingSystem.XamarinForms/Views/ProfilePage.xaml
+++ b/TestingSystem.XamarinForms/TestingSystem.XamarinForms/Views/ProfilePage.xaml
@@ -9,8 +9,8 @@
     <ContentPage.Content>
         <Grid>
             <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="*"/>
-                <ColumnDefinition Width="*"/>
+                <ColumnDefinition Width="2*"/>
+                <ColumnDefinition Width="3*"/>
             </Grid.ColumnDefinitions>
             <Grid.RowDefinitions>
                 <RowDefinition Height="Auto"/>
