--- a/TestingSystem.XamarinForms/TestingSystem.XamarinForms/Views/MaterialPage.xaml
+++ b/TestingSystem.XamarinForms/TestingSystem.XamarinForms/Views/MaterialPage.xaml
@@ -11,26 +11,18 @@
         <ToolbarItem IconImageSource="refresh.png" Command="{Binding RefreshCommand}"/>
     </ContentPage.ToolbarItems>
     <ContentPage.Content>
-        <ListView SelectedItem="{Binding SelectedItem}"  ItemsSource="{Binding StudyingMaterials}" SelectionMode="Single">
+        <ListView SelectedItem="{Binding SelectedItem}"  ItemsSource="{Binding StudyingMaterials}" SelectionMode="Single" HasUnevenRows="True">
             <ListView.Behaviors>
                 <b:EventToCommandBehavior EventName="ItemTapped" Command="{Binding ItemTappedCommand}"/>
             </ListView.Behaviors>
             <ListView.ItemTemplate>
                 <DataTemplate>
                     <ViewCell>
-                        <Grid>
-                            <Grid.ColumnDefinitions>
-                                <ColumnDefinition Width="5*"/>
-                                <ColumnDefinition Width="2*"/>
-                            </Grid.ColumnDefinitions>
-                            <Grid.RowDefinitions>
-                                <RowDefinition/>
-                                <RowDefinition/>
-                            </Grid.RowDefinitions>
-                            <Label Grid.Row="0" Grid.Column="0" Text="{Binding StudyingMaterialName}" HorizontalOptions="Start"/>
-                            <Label Grid.Row="0" Grid.Column="1" Text="{Binding SubjectName}" HorizontalOptions="Start"/>
-                            <Label Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="2" Text="{Binding Link}" HorizontalOptions="Start"/>
-                        </Grid>
+                        <StackLayout Padding="10,5,0,0">
+                            <Label Text="{Binding StudyingMaterialName}" FontSize="Medium" FontAttributes="Bold"/>
+                            <Label Text="{Binding SubjectName, StringFormat='Subject: {0}'}"  FontSize="Medium"/>
+                            <Label Text="{Binding Link}" FontSize="Micro" LineBreakMode="WordWrap"/>
+                        </StackLayout>
                     </ViewCell>
                 </DataTemplate>
             </ListView.ItemTemplate>
