--- a/TestingSystem.XamarinForms/TestingSystem.XamarinForms/Views/ImagePopup.xaml
+++ b/TestingSystem.XamarinForms/TestingSystem.XamarinForms/Views/ImagePopup.xaml
@@ -4,6 +4,7 @@
              xmlns:d="http://xamarin.com/schemas/2014/forms/design"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              mc:Ignorable="d"
+             CloseWhenBackgroundIsClicked="True"
              xmlns:pages="clr-namespace:Rg.Plugins.Popup.Pages;assembly=Rg.Plugins.Popup"
              xmlns:animations="clr-namespace:Rg.Plugins.Popup.Animations;assembly=Rg.Plugins.Popup"
              x:Class="TestingSystem.XamarinForms.Views.ImagePopup">
