Participate page design improvement

--- a/TestingSystem.XamarinForms/TestingSystem.XamarinForms/Controls/ManyAnswersManyCorrectResultViewCell.xaml
+++ b/TestingSystem.XamarinForms/TestingSystem.XamarinForms/Controls/ManyAnswersManyCorrectResultViewCell.xaml
@@ -11,38 +11,50 @@
             <ResourceDictionary>
                 <DataTemplate x:Key="correctAnswer">
                     <ViewCell>
-                        <Grid BackgroundColor="#a8fca7">
-                            <Grid.ColumnDefinitions>
-                                <ColumnDefinition Width="*"/>
-                                <ColumnDefinition Width="Auto"/>
-                            </Grid.ColumnDefinitions>
-                            <Label Text="{Binding AnswerString}" LineBreakMode="WordWrap" VerticalOptions="CenterAndExpand"  Margin="10"/>
-                            <Switch Grid.Column="1" Margin="10" IsToggled="{Binding IsPicked}"  />
-                        </Grid>
+                        <Frame BackgroundColor="#fafafa"  Margin="0" Padding="0">
+                            <Frame Padding="3" Margin="7" CornerRadius="15" BackgroundColor="#a8fca7">
+                                <Grid>
+                                    <Grid.ColumnDefinitions>
+                                        <ColumnDefinition Width="*"/>
+                                        <ColumnDefinition Width="Auto"/>
+                                    </Grid.ColumnDefinitions>
+                                    <Label Text="{Binding AnswerString}" LineBreakMode="WordWrap" VerticalOptions="CenterAndExpand"  Margin="10"/>
+                                    <Switch Grid.Column="1" Margin="10" IsToggled="{Binding IsPicked}"  />
+                                </Grid>
+                            </Frame>
+                        </Frame>
                     </ViewCell>
                 </DataTemplate>
                 <DataTemplate x:Key="wrongAnswer">
                     <ViewCell>
-                        <Grid BackgroundColor="#ff5e5e">
-                            <Grid.ColumnDefinitions>
-                                <ColumnDefinition Width="*"/>
-                                <ColumnDefinition Width="Auto"/>
-                            </Grid.ColumnDefinitions>
-                            <Label Text="{Binding AnswerString}" LineBreakMode="WordWrap" VerticalOptions="CenterAndExpand"  Margin="10"/>
-                            <Switch Grid.Column="1" Margin="10" IsToggled="{Binding IsPicked}"  />
-                        </Grid>
+                        <Frame BackgroundColor="#fafafa"  Margin="0" Padding="0">
+                            <Frame Padding="3" Margin="7" CornerRadius="15" BackgroundColor="#ff5e5e">
+                                <Grid >
+                                    <Grid.ColumnDefinitions>
+                                        <ColumnDefinition Width="*"/>
+                                        <ColumnDefinition Width="Auto"/>
+                                    </Grid.ColumnDefinitions>
+                                    <Label Text="{Binding AnswerString}" LineBreakMode="WordWrap" VerticalOptions="CenterAndExpand"  Margin="10"/>
+                                    <Switch Grid.Column="1" Margin="10" IsToggled="{Binding IsPicked}"  />
+                                </Grid>
+                            </Frame>
+                        </Frame>
                     </ViewCell>
                 </DataTemplate>
                 <DataTemplate x:Key="answer">
                     <ViewCell>
-                        <Grid>
-                            <Grid.ColumnDefinitions>
-                                <ColumnDefinition Width="*"/>
-                                <ColumnDefinition Width="Auto"/>
-                            </Grid.ColumnDefinitions>
-                            <Label Text="{Binding AnswerString}" LineBreakMode="WordWrap" VerticalOptions="CenterAndExpand"  Margin="10"/>
-                            <Switch Grid.Column="1" Margin="10" IsToggled="{Binding IsPicked}"  />
-                        </Grid>
+                        <Frame BackgroundColor="#fafafa" Margin="0" Padding="0">
+                            <Frame Padding="3" Margin="7" CornerRadius="15">
+                                <Grid>
+                                    <Grid.ColumnDefinitions>
+                                        <ColumnDefinition Width="*"/>
+                                        <ColumnDefinition Width="Auto"/>
+                                    </Grid.ColumnDefinitions>
+                                    <Label Text="{Binding AnswerString}" LineBreakMode="WordWrap" VerticalOptions="CenterAndExpand"  Margin="10"/>
+                                    <Switch Grid.Column="1" Margin="10" IsToggled="{Binding IsPicked}"  />
+                                </Grid>
+                            </Frame>
+                        </Frame>
                     </ViewCell>
                 </DataTemplate>
                 <cnvrt:AnswerDataTemplateSelector x:Key="selector"
@@ -55,6 +67,6 @@
         </StackLayout.Resources>
         <Image HeightRequest="{Binding Question.ImagePath, Converter={StaticResource sizeConverter}}" WidthRequest="{Binding Question.ImagePath, Converter={StaticResource sizeConverter}}" Aspect="AspectFit" HorizontalOptions="Center" Source="{Binding Question.ImagePath, Converter={StaticResource pathConverter}}"/>
         <Label Text="{Binding Question.QuestionString}" FontSize="Medium" HorizontalOptions="Center" Margin="5" LineBreakMode="WordWrap"/>
-        <ListView ItemsSource="{Binding Answers}" ItemTemplate="{StaticResource selector}" SelectionMode="None" MinimumHeightRequest="20"/>
+        <ListView ItemsSource="{Binding Answers}" ItemTemplate="{StaticResource selector}" SelectionMode="None" MinimumHeightRequest="15" HasUnevenRows="True"/>
     </StackLayout>
 </ViewCell>
