--- a/TestingSystem.XamarinForms/TestingSystem.XamarinForms/Controls/ManyAnswersOneCorrectResultViewCell.xaml
+++ b/TestingSystem.XamarinForms/TestingSystem.XamarinForms/Controls/ManyAnswersOneCorrectResultViewCell.xaml
@@ -11,27 +11,33 @@
             <ResourceDictionary>
                 <DataTemplate x:Key="correctAnswer">
                     <ViewCell>
-                        <Grid BackgroundColor="#a8fca7">
+                        <!--<Grid >
                             <Grid.RowDefinitions>
                                 <RowDefinition/>
-                            </Grid.RowDefinitions>
-                            <Label Text="{Binding AnswerString}" LineBreakMode="WordWrap" VerticalOptions="CenterAndExpand"  Margin="10"/>
-                        </Grid>
+                            </Grid.RowDefinitions>-->
+                            <Frame Padding="2" Margin="7" CornerRadius="15" BackgroundColor="#a8fca7">
+                                <Label Text="{Binding AnswerString}" LineBreakMode="WordWrap" VerticalOptions="CenterAndExpand"  Margin="10"/>
+                            </Frame>
+                        <!--</Grid>-->
                     </ViewCell>
                 </DataTemplate>
                 <DataTemplate x:Key="wrongAnswer">
                     <ViewCell>
-                        <Grid BackgroundColor="#ff5e5e">
+                        <!--<Grid>
                             <Grid.RowDefinitions>
                                 <RowDefinition/>
-                            </Grid.RowDefinitions>
-                            <Label Text="{Binding AnswerString}" LineBreakMode="WordWrap" VerticalOptions="CenterAndExpand"  Margin="10"/>
-                        </Grid>
+                            </Grid.RowDefinitions>-->
+                            <Frame Padding="2" Margin="7" CornerRadius="15"  BackgroundColor="#ff5e5e">
+                                <Label Text="{Binding AnswerString}" LineBreakMode="WordWrap" VerticalOptions="CenterAndExpand"  Margin="10"/>
+                            </Frame>
+                        <!--</Grid>-->
                     </ViewCell>
                 </DataTemplate>
                 <DataTemplate x:Key="answer">
                     <ViewCell>
-                        <Label Text="{Binding AnswerString}" LineBreakMode="WordWrap" VerticalOptions="CenterAndExpand" Margin="10"/>
+                        <Frame Padding="2" BackgroundColor="#fafafa" Margin="7" CornerRadius="15">
+                            <Label Text="{Binding AnswerString}" LineBreakMode="WordWrap" VerticalOptions="CenterAndExpand" Margin="10"/>
+                        </Frame>
                     </ViewCell>
                 </DataTemplate>
                 <cnvrt:AnswerDataTemplateSelector x:Key="selector"
