--- a/TestingSystem.XamarinForms/TestingSystem.XamarinForms/Controls/ManyAnswersManyCorrectResultViewCell.xaml
+++ b/TestingSystem.XamarinForms/TestingSystem.XamarinForms/Controls/ManyAnswersManyCorrectResultViewCell.xaml
@@ -12,14 +12,14 @@
                 <DataTemplate x:Key="correctAnswer">
                     <ViewCell>
                         <Frame BackgroundColor="#fafafa"  Margin="0" Padding="0">
-                            <Frame Padding="3" Margin="7" CornerRadius="15" BackgroundColor="#a8fca7">
+                            <Frame Padding="1" Margin="5" CornerRadius="15" BackgroundColor="#a8fca7">
                                 <Grid>
                                     <Grid.ColumnDefinitions>
                                         <ColumnDefinition Width="*"/>
                                         <ColumnDefinition Width="Auto"/>
                                     </Grid.ColumnDefinitions>
                                     <Label Text="{Binding AnswerString}" LineBreakMode="WordWrap" VerticalOptions="CenterAndExpand"  Margin="10"/>
-                                    <Switch Grid.Column="1" Margin="10" IsToggled="{Binding IsPicked}"  />
+                                    <Switch Grid.Column="1" Margin="10" IsToggled="{Binding IsPicked}" IsEnabled="True"/>
                                 </Grid>
                             </Frame>
                         </Frame>
@@ -28,14 +28,14 @@
                 <DataTemplate x:Key="wrongAnswer">
                     <ViewCell>
                         <Frame BackgroundColor="#fafafa"  Margin="0" Padding="0">
-                            <Frame Padding="3" Margin="7" CornerRadius="15" BackgroundColor="#ff5e5e">
+                            <Frame Padding="1" Margin="5" CornerRadius="15" BackgroundColor="#ff5e5e">
                                 <Grid >
                                     <Grid.ColumnDefinitions>
                                         <ColumnDefinition Width="*"/>
                                         <ColumnDefinition Width="Auto"/>
                                     </Grid.ColumnDefinitions>
                                     <Label Text="{Binding AnswerString}" LineBreakMode="WordWrap" VerticalOptions="CenterAndExpand"  Margin="10"/>
-                                    <Switch Grid.Column="1" Margin="10" IsToggled="{Binding IsPicked}"  />
+                                    <Switch Grid.Column="1" Margin="10" IsToggled="{Binding IsPicked}" IsEnabled="True" />
                                 </Grid>
                             </Frame>
                         </Frame>
@@ -44,14 +44,14 @@
                 <DataTemplate x:Key="answer">
                     <ViewCell>
                         <Frame BackgroundColor="#fafafa" Margin="0" Padding="0">
-                            <Frame Padding="3" Margin="7" CornerRadius="15">
+                            <Frame Padding="1" Margin="5" CornerRadius="15">
                                 <Grid>
                                     <Grid.ColumnDefinitions>
                                         <ColumnDefinition Width="*"/>
                                         <ColumnDefinition Width="Auto"/>
                                     </Grid.ColumnDefinitions>
                                     <Label Text="{Binding AnswerString}" LineBreakMode="WordWrap" VerticalOptions="CenterAndExpand"  Margin="10"/>
-                                    <Switch Grid.Column="1" Margin="10" IsToggled="{Binding IsPicked}"  />
+                                    <Switch Grid.Column="1" Margin="10" IsToggled="{Binding IsPicked}" IsEnabled="True" />
                                 </Grid>
                             </Frame>
                         </Frame>
@@ -65,7 +65,24 @@
             <cnvrt:ImagePathValueConverter x:Key="pathConverter"/>
             <cnvrt:ImageSizeValueConverter x:Key="sizeConverter"/>
         </StackLayout.Resources>
-        <Image HeightRequest="{Binding Question.ImagePath, Converter={StaticResource sizeConverter}}" WidthRequest="{Binding Question.ImagePath, Converter={StaticResource sizeConverter}}" Aspect="AspectFit" HorizontalOptions="Center" Source="{Binding Question.ImagePath, Converter={StaticResource pathConverter}}"/>
+        <Grid Padding="0" Margin="0" HorizontalOptions="Center" 
+              HeightRequest="{Binding Question.ImagePath, Converter={StaticResource sizeConverter}}" 
+              WidthRequest="{Binding Question.ImagePath, Converter={StaticResource sizeConverter}}">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="Auto"/>
+            </Grid.RowDefinitions>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="Auto"/>
+            </Grid.ColumnDefinitions>
+            <Image Grid.Row="0" Grid.Column="0"
+                    HeightRequest="{Binding Question.ImagePath, Converter={StaticResource sizeConverter}}" 
+                    WidthRequest="{Binding Question.ImagePath, Converter={StaticResource sizeConverter}}" 
+                    Source="{Binding Question.ImagePath, Converter={StaticResource pathConverter}}"
+                    HorizontalOptions="Center" 
+                    x:Name="img"
+                    Aspect="AspectFit"/>
+            <ActivityIndicator Grid.Row="0" Grid.Column="0" IsRunning="{Binding Source={x:Reference img}, Path=IsLoading}" HeightRequest="80" WidthRequest="80"/>
+        </Grid>
         <Label Text="{Binding Question.QuestionString}" FontSize="Medium" HorizontalOptions="Center" Margin="5" LineBreakMode="WordWrap"/>
         <ListView ItemsSource="{Binding Answers}" ItemTemplate="{StaticResource selector}" SelectionMode="None" MinimumHeightRequest="15" HasUnevenRows="True"/>
     </StackLayout>
