--- a/TestingSystem.XamarinForms/TestingSystem.XamarinForms/Controls/ManyAnswersManyCorrectViewCell.xaml
+++ b/TestingSystem.XamarinForms/TestingSystem.XamarinForms/Controls/ManyAnswersManyCorrectViewCell.xaml
@@ -10,29 +10,43 @@
         <StackLayout.Resources>
             <cnvrt:ImagePathValueConverter x:Key="pathConverter"/>
             <cnvrt:ImageSizeValueConverter x:Key="sizeConverter"/>
+            <cnvrt:CellColorValueConverter x:Key="colorConverter"/>
         </StackLayout.Resources>
-        <Image 
-            HeightRequest="{Binding Question.ImagePath, Converter={StaticResource sizeConverter}}" 
-            WidthRequest="{Binding Question.ImagePath, Converter={StaticResource sizeConverter}}" 
-            Source="{Binding Question.ImagePath, Converter={StaticResource pathConverter}}"
-            HorizontalOptions="Center" 
-            x:Name="img"
-            Aspect="AspectFit" />
+        <Grid Padding="0" Margin="0" HorizontalOptions="Center" 
+              HeightRequest="{Binding Question.ImagePath, Converter={StaticResource sizeConverter}}" 
+              WidthRequest="{Binding Question.ImagePath, Converter={StaticResource sizeConverter}}">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="Auto"/>
+            </Grid.RowDefinitions>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="Auto"/>
+            </Grid.ColumnDefinitions>
+            <Image Grid.Row="0" Grid.Column="0"
+                    HeightRequest="{Binding Question.ImagePath, Converter={StaticResource sizeConverter}}" 
+                    WidthRequest="{Binding Question.ImagePath, Converter={StaticResource sizeConverter}}" 
+                    Source="{Binding Question.ImagePath, Converter={StaticResource pathConverter}}"
+                    HorizontalOptions="Center" 
+                    x:Name="img"
+                    Aspect="AspectFit"/>
+            <ActivityIndicator Grid.Row="0" Grid.Column="0" IsRunning="{Binding Source={x:Reference img}, Path=IsLoading}" HeightRequest="80" WidthRequest="80"/>
+        </Grid>
         <Label Text="{Binding Question.QuestionString}" FontSize="Medium" Margin="5" LineBreakMode="WordWrap" HorizontalOptions="Center"/>
         <ListView ItemsSource="{Binding Answers}" SelectionMode="None" HasUnevenRows="True" MinimumHeightRequest="15">
             <ListView.ItemTemplate>
                 <DataTemplate>
                     <ViewCell>
-                        <Frame Margin="0" Padding="0" BackgroundColor="#fafafa">
-                            <Frame Padding="2" Margin="7" CornerRadius="15">
-                                <Grid>
-                                    <Grid.ColumnDefinitions>
-                                        <ColumnDefinition Width="*"/>
-                                        <ColumnDefinition Width="Auto"/>
-                                    </Grid.ColumnDefinitions>
-                                    <Label Grid.Column="0" Text="{Binding AnswerString}" LineBreakMode="WordWrap" VerticalOptions="Center" Margin="10"/>
-                                    <Switch Grid.Column="1" Margin="10" IsToggled="{Binding IsPicked}"/>
-                                </Grid>
+                        <Frame Margin="0" Padding="0" BackgroundColor="#fafafa" CornerRadius="15" HasShadow="False" BorderColor="#fafafa">
+                            <Frame Margin="0" Padding="0" BackgroundColor="{Binding Path=IsToggled, Source={x:Reference switch}, Converter={StaticResource colorConverter}}">
+                                <Frame Padding="0" Margin="5" CornerRadius="15">
+                                    <Grid>
+                                        <Grid.ColumnDefinitions>
+                                            <ColumnDefinition Width="*"/>
+                                            <ColumnDefinition Width="Auto"/>
+                                        </Grid.ColumnDefinitions>
+                                        <Label Grid.Column="0" Text="{Binding AnswerString}" LineBreakMode="WordWrap" VerticalOptions="Center" Margin="10"/>
+                                        <Switch Grid.Column="1" Margin="10" x:Name="switch" IsToggled="{Binding IsPicked}"/>
+                                    </Grid>
+                                </Frame>
                             </Frame>
                         </Frame>
                     </ViewCell>
