--- a/TestingSystem.XamarinForms/TestingSystem.XamarinForms/Controls/ManyAnswersOneCorrectResultViewCell.xaml
+++ b/TestingSystem.XamarinForms/TestingSystem.XamarinForms/Controls/ManyAnswersOneCorrectResultViewCell.xaml
@@ -48,7 +48,24 @@
             <cnvrt:ImagePathValueConverter x:Key="pathConverter"/>
             <cnvrt:ImageSizeValueConverter x:Key="sizeConverter"/>
         </StackLayout.Resources>
-        <Image HeightRequest="{Binding Question.ImagePath, Converter={StaticResource sizeConverter}}" WidthRequest="{Binding Question.ImagePath, Converter={StaticResource sizeConverter}}" Aspect="AspectFit" HorizontalOptions="Center" Source="{Binding Question.ImagePath, Converter={StaticResource pathConverter}}"/>
+        <Grid Padding="0" Margin="0" HorizontalOptions="Center" 
+              HeightRequest="{Binding Question.ImagePath, Converter={StaticResource sizeConverter}}" 
+              WidthRequest="{Binding Question.ImagePath, Converter={StaticResource sizeConverter}}">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="Auto"/>
+            </Grid.RowDefinitions>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="Auto"/>
+            </Grid.ColumnDefinitions>
+            <Image Grid.Row="0" Grid.Column="0"
+                    HeightRequest="{Binding Question.ImagePath, Converter={StaticResource sizeConverter}}" 
+                    WidthRequest="{Binding Question.ImagePath, Converter={StaticResource sizeConverter}}" 
+                    Source="{Binding Question.ImagePath, Converter={StaticResource pathConverter}}"
+                    HorizontalOptions="Center" 
+                    x:Name="img"
+                    Aspect="AspectFit"/>
+            <ActivityIndicator Grid.Row="0" Grid.Column="0" IsRunning="{Binding Source={x:Reference img}, Path=IsLoading}" HeightRequest="80" WidthRequest="80"/>
+        </Grid>
         <Label Text="{Binding Question.QuestionString}" FontSize="Medium" HorizontalOptions="Center" Margin="5" LineBreakMode="WordWrap"/>
         <ListView ItemsSource="{Binding Answers}" ItemTemplate="{StaticResource selector}" SelectionMode="None" MinimumHeightRequest="20" HasUnevenRows="True"/>
     </StackLayout>
