--- a/TestingSystem.XamarinForms/TestingSystem.XamarinForms/Views/HistoryPage.xaml
+++ b/TestingSystem.XamarinForms/TestingSystem.XamarinForms/Views/HistoryPage.xaml
@@ -10,44 +10,47 @@
         <ToolbarItem IconImageSource="refresh.png" Command="{Binding RefreshCommand}"/>
     </ContentPage.ToolbarItems>
     <ContentPage.Content>
-        <ListView ItemsSource="{Binding Results}" SelectionMode="None" RowHeight="60">
-            <ListView.ItemTemplate>
-                <DataTemplate>
-                    <ViewCell>
-                        <Grid >
-                            <Grid.ColumnDefinitions>
-                                <ColumnDefinition Width="2*"/>
-                                <ColumnDefinition Width="1*"/>
-                            </Grid.ColumnDefinitions>
-                            <Grid.RowDefinitions>
-                                <RowDefinition/>
-                                <RowDefinition/>
-                            </Grid.RowDefinitions>
-                            <Grid Grid.Row="0" Grid.Column="0" VerticalOptions="Center" HorizontalOptions="Center">
+        <StackLayout>
+            <Label Text="No tests history" IsVisible="{Binding IsLabelVisible}" IsEnabled="{Binding IsLabelVisible}" FontSize="Large" FontAttributes="Bold" Margin="0,10,0,0" HorizontalOptions="CenterAndExpand"/>
+            <ListView ItemsSource="{Binding Results}" SelectionMode="None" RowHeight="60">
+                <ListView.ItemTemplate>
+                    <DataTemplate>
+                        <ViewCell>
+                            <Grid >
                                 <Grid.ColumnDefinitions>
-                                    <ColumnDefinition/>
-                                    <ColumnDefinition/>
+                                    <ColumnDefinition Width="2*"/>
+                                    <ColumnDefinition Width="1*"/>
                                 </Grid.ColumnDefinitions>
-                                <Label Grid.Column="0" Text="Test: " HorizontalOptions="End" FontSize="Medium" FontAttributes="Bold"/>
-                                <Label Grid.Column="1" Text="{Binding TestName}" HorizontalOptions="Start" FontSize="Medium"/>
+                                <Grid.RowDefinitions>
+                                    <RowDefinition/>
+                                    <RowDefinition/>
+                                </Grid.RowDefinitions>
+                                <Grid Grid.Row="0" Grid.Column="0" VerticalOptions="Center" HorizontalOptions="Center">
+                                    <Grid.ColumnDefinitions>
+                                        <ColumnDefinition/>
+                                        <ColumnDefinition/>
+                                    </Grid.ColumnDefinitions>
+                                    <Label Grid.Column="0" Text="Test: " HorizontalOptions="End" FontSize="Medium" FontAttributes="Bold"/>
+                                    <Label Grid.Column="1" Text="{Binding TestName}" HorizontalOptions="Start" FontSize="Medium"/>
+                                </Grid>
+                                <Grid Grid.Row="1" Grid.Column="0" VerticalOptions="Center" HorizontalOptions="Center">
+                                    <Grid.ColumnDefinitions>
+                                        <ColumnDefinition/>
+                                        <ColumnDefinition/>
+                                    </Grid.ColumnDefinitions>
+                                    <Label Grid.Column="0" Text="Subject: " HorizontalOptions="End" FontSize="Medium" FontAttributes="Bold"/>
+                                    <Label Grid.Column="1" Text="{Binding SubjectName}" HorizontalOptions="Start" FontSize="Medium"/>
+                                </Grid>
+                                <StackLayout Grid.Row="0" Grid.Column="1" Grid.RowSpan="2" Orientation="Horizontal" VerticalOptions="Center" HorizontalOptions="Center">
+                                    <Label Text="{Binding Result}" FontSize="Large"/>
+                                    <Label Text="/" FontSize="Large"/>
+                                    <Label Text="{Binding QuestionCount}" FontSize="Large"/>
+                                </StackLayout>
                             </Grid>
-                            <Grid Grid.Row="1" Grid.Column="0" VerticalOptions="Center" HorizontalOptions="Center">
-                                <Grid.ColumnDefinitions>
-                                    <ColumnDefinition/>
-                                    <ColumnDefinition/>
-                                </Grid.ColumnDefinitions>
-                                <Label Grid.Column="0" Text="Subject: " HorizontalOptions="End" FontSize="Medium" FontAttributes="Bold"/>
-                                <Label Grid.Column="1" Text="{Binding SubjectName}" HorizontalOptions="Start" FontSize="Medium"/>
-                            </Grid>
-                            <StackLayout Grid.Row="0" Grid.Column="1" Grid.RowSpan="2" Orientation="Horizontal" VerticalOptions="Center" HorizontalOptions="Center">
-                                <Label Text="{Binding Result}" FontSize="Large"/>
-                                <Label Text="/" FontSize="Large"/>
-                                <Label Text="{Binding QuestionCount}" FontSize="Large"/>
-                            </StackLayout>
-                        </Grid>
-                    </ViewCell>
-                </DataTemplate>
-            </ListView.ItemTemplate>
-        </ListView>
+                        </ViewCell>
+                    </DataTemplate>
+                </ListView.ItemTemplate>
+            </ListView>
+        </StackLayout>
     </ContentPage.Content>
 </ContentPage>
