--- a/TestingSystem.XamarinForms/TestingSystem.XamarinForms/Views/MaterialPage.xaml
+++ b/TestingSystem.XamarinForms/TestingSystem.XamarinForms/Views/MaterialPage.xaml
@@ -11,21 +11,24 @@
         <ToolbarItem IconImageSource="refresh.png" Command="{Binding RefreshCommand}"/>
     </ContentPage.ToolbarItems>
     <ContentPage.Content>
-        <ListView SelectedItem="{Binding SelectedItem}"  ItemsSource="{Binding StudyingMaterials}" SelectionMode="Single" HasUnevenRows="True">
-            <ListView.Behaviors>
-                <b:EventToCommandBehavior EventName="ItemTapped" Command="{Binding ItemTappedCommand}"/>
-            </ListView.Behaviors>
-            <ListView.ItemTemplate>
-                <DataTemplate>
-                    <ViewCell>
-                        <StackLayout Padding="10,5,0,0">
-                            <Label Text="{Binding StudyingMaterialName}" FontSize="Medium" FontAttributes="Bold"/>
-                            <Label Text="{Binding SubjectName, StringFormat='Subject: {0}'}"  FontSize="Medium"/>
-                            <Label Text="{Binding Link}" FontSize="Micro" LineBreakMode="WordWrap"/>
-                        </StackLayout>
-                    </ViewCell>
-                </DataTemplate>
-            </ListView.ItemTemplate>
-        </ListView>
+        <StackLayout>
+            <Label Text="No study materials" IsVisible="{Binding IsLabelVisible}" IsEnabled="{Binding IsLabelVisible}" FontSize="Large" FontAttributes="Bold" Margin="0,10,0,0" HorizontalOptions="CenterAndExpand"/>
+            <ListView SelectedItem="{Binding SelectedItem}"  ItemsSource="{Binding StudyingMaterials}" SelectionMode="Single" HasUnevenRows="True">
+                <ListView.Behaviors>
+                    <b:EventToCommandBehavior EventName="ItemTapped" Command="{Binding ItemTappedCommand}"/>
+                </ListView.Behaviors>
+                <ListView.ItemTemplate>
+                    <DataTemplate>
+                        <ViewCell>
+                            <StackLayout Padding="10,5,0,0">
+                                <Label Text="{Binding StudyingMaterialName}" FontSize="Medium" FontAttributes="Bold"/>
+                                <Label Text="{Binding SubjectName, StringFormat='Subject: {0}'}"  FontSize="Medium"/>
+                                <Label Text="{Binding Link}" FontSize="Micro" LineBreakMode="WordWrap"/>
+                            </StackLayout>
+                        </ViewCell>
+                    </DataTemplate>
+                </ListView.ItemTemplate>
+            </ListView>
+        </StackLayout>
     </ContentPage.Content>
 </ContentPage>
