Fix image popup, add services exception handling

--- a/TestingSystem.XamarinForms/TestingSystem.XamarinForms/Views/ImagePopup.xaml
+++ b/TestingSystem.XamarinForms/TestingSystem.XamarinForms/Views/ImagePopup.xaml
@@ -20,7 +20,7 @@
             EasingOut="SinIn"
             HasBackgroundAnimation="True"/>
     </pages:PopupPage.Animation>
-    <ScrollView>
+    <ScrollView HorizontalOptions="Center" VerticalOptions="Center">
         <Grid Padding="0" Margin="0">
             <Grid.RowDefinitions>
                 <RowDefinition/>
